# rust_template_STM32F411

./: Cargo.toml  openocd.gdb  readme.md
.cargo/: config
scripts/: first_start.py  run.py
src/: main.rs
