[package]
name = "project-name"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb = "0.1.2"
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "*"
panic-halt = "0.2"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f411"]

[[bin]]
name = "stm32f411"
path = "src/main.rs"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true